// The components of a tile that can be rendered by a tile renderer.
syntax = "proto3";

package androidx.wear.tiles.proto;


import "timeline.proto";


option java_package = "androidx.wear.tiles.proto";
option java_outer_classname = "TileProto";

// A holder for a tile. This specifies the resources to use for this delivery
// of the tile, and the timeline for the tile.
message Tile {
  // The resource version required for these tiles.
  string resources_version = 1;

  // The tiles to show in the carousel, along with their validity periods.
  Timeline timeline = 2;
}
